--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
         {
             "extensionName": ".min.css",
             "format": "compressed",
-            "savePath": "/dist/css"
+            "savePath": "/css"
         }
     ],
     "liveSassCompile.settings.excludeList": [
@@ -17,6 +17,7 @@
     ],
     "liveSassCompile.settings.generateMap": true,
     "liveSassCompile.settings.autoprefix": [
-        "defaults"
+        "> 1%",
+        "last 2 versions"
     ]
 }
