--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
             "savePath": "/css"
         },
         {
-            "extensionName": ".min.css",
             "format": "compressed",
+            "extensionName": ".min.css",
             "savePath": "/css"
         }
     ],
@@ -16,8 +16,6 @@
         ".vscode/**"
     ],
     "liveSassCompile.settings.generateMap": true,
-    "liveSassCompile.settings.autoprefix": [
-        "> 1%",
-        "last 2 versions"
-    ]
+    "liveServer.settings.port": 1236,
+    "liveSassCompile.settings.autoprefix": null
 }
